[package]
name = "yokoyboi"
version = "0.1.0"
edition = "2021"

[dependencies]
circular-queue = "0.2.6"
iced = { git = "https://github.com/iced-rs/iced.git", features = [
  "advanced",
  "image",
] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", features = [
  "tabs",
] }
# iced = { version = "0.12.1", features = [ "image" ] }
# iced_aw = "0.9.3"
rand = "0.8.5"

[profile.dev]
opt-level = 3
